scripts/nullness/original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8.txt
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:28: error: [initialization.field.uninitialized] the default constructor does not initialize field jsonResponse
	private JsonObject jsonResponse;
	                   ^
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:30: error: [initialization.field.uninitialized] the default constructor does not initialize field uriBld
	protected URIBuilder uriBld;
	                     ^
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:31: error: [initialization.field.uninitialized] the default constructor does not initialize field uri
	protected URI uri;
	              ^
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:32: error: [initialization.field.uninitialized] the default constructor does not initialize field page
	protected Integer page;
	                  ^
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:63: error: [initialization.field.uninitialized] the default constructor does not initialize field url
	protected URL url;
	              ^
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:89: error: [argument] incompatible argument for parameter arg0 of Logger.error.
			log.error(e.getMessage());
			                      ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:126: error: [argument] incompatible argument for parameter arg0 of Logger.error.
			log.error(e.getMessage());
			                      ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:129: error: [argument] incompatible argument for parameter arg0 of Logger.error.
			log.error(e.getMessage());
			                      ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:130: error: [assignment] incompatible types in assignment.
			jsonResponse =  null;
			                ^
  found   : null (NullType)
  required: @Initialized @NonNull JsonObject
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/entity/MetroArea.java:8: error: [initialization.fields.uninitialized] the constructor does not initialize fields: displayName
	public MetroArea(String country, String id) {
	       ^
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/entity/City.java:18: error: [initialization.fields.uninitialized] the constructor does not initialize fields: state
	public City(String name, String country, double latitude, double longitude) {
	       ^
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/entity/City.java:25: error: [initialization.fields.uninitialized] the constructor does not initialize fields: state
	public City(String name, String country) {
	       ^
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/entity/Artist.java:9: error: [initialization.fields.uninitialized] the constructor does not initialize fields: name, id
	public Artist(){
	       ^
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/entity/Concert.java:27: error: [initialization.fields.uninitialized] the constructor does not initialize fields: dateTime, date, performance, venue, id, location
	public Concert() {
	       ^
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/EventSearch.java:31: error: [assignment] incompatible types in assignment.
		currentArtist = null;
		                ^
  found   : null (NullType)
  required: @Initialized @NonNull Artist
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/EventSearch.java:32: error: [assignment] incompatible types in assignment.
		currentlocationId = null;
		                    ^
  found   : null (NullType)
  required: @Initialized @NonNull String
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/EventSearch.java:64: error: [return] incompatible types in return.
		return null;
		       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull URI
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/EventSearch.java:82: error: [return] incompatible types in return.
		return null;
		       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull URI
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/EventSearch.java:182: error: [return] incompatible types in return.
		return null;
		       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull ArrayList<@Initialized @NonNull Concert>
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/EventSearch.java:188: error: [return] incompatible types in return.
		return null;
		       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull JsonObject
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:53: error: [argument] incompatible argument for parameter arg0 of DateTime constructor.
		event.setDateTime(new DateTime(datetime));
		                               ^
  found   : @Initialized @Nullable DateTime
  required: @Initialized @NonNull Object
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:91: error: [unboxing.of.nullable] unboxing a possibly-null reference lat
			location = new SimpleLocation(lat, lng, locTmp.get("city").getAsString());
			                              ^
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:91: error: [unboxing.of.nullable] unboxing a possibly-null reference lng
			location = new SimpleLocation(lat, lng, locTmp.get("city").getAsString());
			                                   ^
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:110: error: [unboxing.of.nullable] unboxing a possibly-null reference lat
			venue = new Venue(	lat, 
			                  	^
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:111: error: [unboxing.of.nullable] unboxing a possibly-null reference lng
								lng, 
								^
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:147: error: [unboxing.of.nullable] unboxing a possibly-null reference lat
			city = new City(name,country,lat,lng);;
			                             ^
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:147: error: [unboxing.of.nullable] unboxing a possibly-null reference lng
			city = new City(name,country,lat,lng);;
			                                 ^
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/ArtistSearch.java:29: error: [assignment] incompatible types in assignment.
		currentArtist = null;
		                ^
  found   : null (NullType)
  required: @Initialized @NonNull Artist
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/ArtistSearch.java:129: error: [return] incompatible types in return.
		return null;
		       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull URI
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/ArtistSearch.java:139: error: [return] incompatible types in return.
		return null;
		       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull ArrayList<@Initialized @NonNull Artist>
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/LocationSearch.java:29: error: [assignment] incompatible types in assignment.
		currentLocation = null;
		                  ^
  found   : null (NullType)
  required: @Initialized @NonNull String
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/LocationSearch.java:111: error: [dereference.of.nullable] dereference of possibly-null reference locations
			locations.add(fullLocation);
			^
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/LocationSearch.java:118: error: [return] incompatible types in return.
		return locations;
		       ^
  type of expression: @Initialized @Nullable ArrayList<@Initialized @NonNull FullLocation>
  method return type: @Initialized @NonNull ArrayList<@Initialized @NonNull FullLocation>
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/LocationSearch.java:132: error: [argument] incompatible argument for parameter arg0 of Logger.error.
			log.error(e.getCause());
			                    ^
  found   : @Initialized @Nullable Throwable
  required: @Initialized @NonNull Object
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/LocationSearch.java:135: error: [return] incompatible types in return.
		return uri;
		       ^
  type of expression: @Initialized @Nullable URI
  method return type: @Initialized @NonNull URI
../original/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/LocationSearch.java:145: error: [return] incompatible types in return.
		return null;
		       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull ArrayList<@Initialized @NonNull FullLocation>
36 errors
